added some more changes

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -123,7 +123,7 @@
                   </li>
 
                   <li><a href="./careers.html" class=".main-a">Career</a></li>
-                  
+
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -150,7 +150,14 @@
             </nav>
           </div>
         </header>
-        <div class="about-home" style="background: url('https://images.unsplash.com/photo-1590935217281-8f102120d683?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-position: top top;">
+        <div
+          class="about-home"
+          style="
+            background: url('https://images.unsplash.com/photo-1671445791136-049a3f151e3c?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            background-position: 0 0;
+            background-size: contain;
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -202,13 +209,12 @@
                 <img src="../assets/contacts/webdevsvg.svg" alt="" />
               </div>
               <div class="lower-contact">
-                <h5><a href="#">Website Development</a></h5>
+                <h5><a href="#">Academic & Upgradation</a></h5>
                 <p class="contact-detail">
                   <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
                 </p>
                 <p class="contact-detail">
-                  <i class="fa-solid fa-envelope"></i
-                  ><span>scipy@example.com</span>
+                  <i class="fa-solid fa-envelope"></i><span>hr@scipy.com</span>
                 </p>
                 <div class="contact-us">
                   <a href="#"
@@ -222,13 +228,13 @@
                 <img src="../assets/contacts/digitalsvg.svg" alt="" />
               </div>
               <div class="lower-contact">
-                <h5><a href="#">Digital Marketing</a></h5>
+                <h5><a href="#">Projects & Sales</a></h5>
                 <p class="contact-detail">
-                  <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
+                  <i class="fa-solid fa-phone"></i><span>+91 8921229471</span>
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
-                  ><span>scipy@example.com</span>
+                  ><span>Hello@scipy.com</span>
                 </p>
                 <div class="contact-us">
                   <a href="#"
@@ -242,13 +248,13 @@
                 <img src="../assets/contacts/erpsvg.svg" alt="" />
               </div>
               <div class="lower-contact">
-                <h5><a href="#">ERP Solutions</a></h5>
+                <h5><a href="#">Consultations & Queries</a></h5>
                 <p class="contact-detail">
-                  <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
+                  <i class="fa-solid fa-phone"></i><span>+91 9048245318</span>
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
-                  ><span>scipy@example.com</span>
+                  ><span>info@scipy.com</span>
                 </p>
                 <div class="contact-us">
                   <a href="#"
@@ -259,23 +265,15 @@
             </div>
           </div>
           <div class="adr">
-            <div class="adr-row">
+            <div class="adr-row d-flex justify-content-center align-items-center gap-5">
               <div class="adr-col">
-                <h4 class="txt">Phone Number</h4>
-                <span class="txth"
-                  >+91 9048245318, <br />
-                  +91 8921229471
+                <h4 class="txt">Head Office</h4>
+                <span class="txth">
+                  TC 26/981, First floor, Plammoodu - PMG Road TVM - 04, Kerala 695033
                 </span>
               </div>
               <div class="adr-col">
-                <h4 class="txt">Email Address</h4>
-                <span class="txth"
-                  ><a href="#">scipytechnologies@gmail.com </a
-                  ><a href="#">info@scipytechnologies.com </a></span
-                >
-              </div>
-              <div class="adr-col">
-                <h4 class="txt">Head Office</h4>
+                <h4 class="txt">Cooperative Office</h4>
                 <span class="txth">
                   Sunny Mead Lane, Near Jubilee Hospital, First Floor, Erathodi,
                   Palayam Trivandrum 695033
@@ -311,77 +309,51 @@
       </section>
       <footer class="footer-main">
         <div class="auto-container">
-          <div class="footer-cta-container">
-            <div class="footer-cta">
-              <div class="contact-text">CONTACT US</div>
-              <div class="rectangle-div"></div>
-              <div class="rectangle-div2"></div>
-              <div class="get-row">
-                <div class="get-col get-in-Text">
-                  <h2>Let's Get In Touch</h2>
-                  <p>
-                    Your Search for a reliable IT Services Partner and emerging
-                    technology holder ends here. Send Us the Requirements &
-                    Let’s Talk.
-                  </p>
-                </div>
-                <div class="get-col button-white">
-                  <div class="main-white-btn">
-                    <a href="#">SAY HELLO TO US</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="auto-container">
           <div class="main-footer-widgets">
             <div class="footer-col">
-              <h5 class="footer-title">Subscribe Us</h5>
-              <div class="footer-text">
-                Join us to our Newsletter and releases submit.
-              </div>
-              <div class="form-group">
-                <input type="email" placeholder="Enter your email!" required />
-                <button type="submit" class="submit-newsletter">
-                  <i class="fa-solid fa-arrow-right email-arrow"></i>
-                </button>
-              </div>
-              <div class="footer-privacy">
-                Our <span class="blue-footer">Privacy Policy</span> and provide
-                consent to receive <br />
-                updates from our company.
-              </div>
-            </div>
-            <div class="footer-col">
               <div class="footer-widget-links">
-                <h4 class="footer-title">Service Links</h4>
+                <h4 class="footer-title">Company</h4>
                 <ul class="main-footer-list">
-                  <li><a href="./websitedev.html">Website Development</a></li>
-                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
-                  <li><a href="./erppage.html">ERP Solutions</a></li>
-                  <li><a href="./softwaredev.html">Software Development</a></li>
-                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+                  <li><a id="home" href="#">Home</a></li>
+                  <li><a href="./pages/careers.html">Career</a></li>
                   <li>
-                    <a href="./maintenance.html">Maintenance and Support</a>
+                    <a id="About-us" href="./pages/aboutus.html">About Us</a>
                   </li>
-                  <li><a href="./advisory.html">Advisory</a></li>
-                  <li><a href="./appdev.html">App Development</a></li>
-                  <li><a href="./branding.html">Branding</a></li>
+                  <li>
+                    <a id="About-us" href="./pages/contact.html">Contact Us</a>
+                  </li>
                 </ul>
               </div>
             </div>
             <div class="footer-col">
               <div class="footer-widget-links">
-                <h4 class="footer-title">Quick links</h4>
-                <ul class="main-footer-list">
-                  <li><a href="../index.html">Home</a></li>
-                  <li><a href="./careers.html">Career</a></li>
-                  <li><a href="./aboutus.html">About Us</a></li>
-                  <li><a href="./contact.html">Contact Us</a></li>
+                <h4 class="footer-title">Services</h4>
+                <ul class="main-footer-list serv-list">
+                  <li>
+                    <a href="./pages/websitedev.html">Website Development</a>
+                  </li>
+                  <li>
+                    <a href="./pages/digitalmarket.html">Digital Marketing</a>
+                  </li>
+                  <li>
+                    <a href="./pages/erppage.html">ERP Solutions</a>
+                  </li>
+                  <li>
+                    <a href="./pages/softwaredev.html">Software Development</a>
+                  </li>
+                  <li><a href="./pages/advisory.html">Advanced Tech</a></li>
+                  <li>
+                    <a href="./pages/maintenance.html"
+                      >Maintenance and Support</a
+                    >
+                  </li>
+                  <li><a href="./pages/advisory.html">Advisory</a></li>
+                  <li><a href="./pages/appdev.html">App Development</a></li>
+                  <li><a href="./pages/branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
+
             <div class="footer-col">
               <div class="footer-widget-links-2">
                 <h4 class="footer-title">Socials</h4>
@@ -410,6 +382,23 @@
                 </ul>
               </div>
             </div>
+            <div class="footer-col">
+              <h5 class="footer-title">Subscribe Us</h5>
+              <div class="footer-text">
+                Join us to our Newsletter and releases submit.
+              </div>
+              <div class="form-group">
+                <input type="email" placeholder="Enter your email!" required />
+                <button type="submit" class="submit-newsletter">
+                  <i class="fa-solid fa-arrow-right email-arrow"></i>
+                </button>
+              </div>
+              <div class="footer-privacy">
+                Our <span class="blue-footer">Privacy Policy</span> and provide
+                consent to receive <br />
+                updates from our company.
+              </div>
+            </div>
           </div>
         </div>
         <div class="copyright-foot">
@@ -431,11 +420,13 @@
       </div>
       <ul class="sidebar-menu">
         <!-- <li><img src="../assets/header-logo.png" alt="" /></li> -->
-        <li >
+        <li>
           <a id="home-sidebar" href="../index.html">Home</a>
         </li>
         <li>
-          <a id="toggle-service" href="#">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
+          <a id="toggle-service" href="#"
+            >Services <i class="fa-solid fa-arrow-right serv-arrow"></i
+          ></a>
           <ul id="menu" class="toogle-ul">
             <li>
               <a href="./websitedev.html" data-page="Service1"
@@ -448,9 +439,7 @@
               >
             </li>
             <li>
-              <a href="./erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
@@ -461,9 +450,16 @@
           </ul>
         </li>
         <li><a href="./careers.html">Career</a></li>
-        
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
-        <li><a id="contact-sidebar" href="../index.html" style="color: #fff; background-color: #0092ff">Contact Us</a></li>
+        <li>
+          <a
+            id="contact-sidebar"
+            href="../index.html"
+            style="color: #fff; background-color: #0092ff"
+            >Contact Us</a
+          >
+        </li>
       </ul>
     </div>
     <script src="../js/Sidebarcollapse.js"></script>
