--- a/pages/websitedev.html
+++ b/pages/websitedev.html
@@ -130,7 +130,7 @@
                       </li>
                     </ul>
                   </li>
-                
+
                   <li><a href="./careers.html" class=".main-a">Career</a></li>
 
                   <li>
@@ -159,7 +159,7 @@
         <div
           class="about-home"
           style="
-            background: url('https://images.pexels.com/photos/5926373/pexels-photo-5926373.jpeg?auto=compress&cs=tinysrgb&w=1600');
+            background: url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
           "
         >
           <div class="header-top">
@@ -395,52 +395,49 @@
         <div class="auto-container">
           <div class="main-footer-widgets">
             <div class="footer-col">
-              <h5 class="footer-title">Subscribe Us</h5>
-              <div class="footer-text">
-                Join us to our Newsletter and releases submit.
-              </div>
-              <div class="form-group">
-                <input type="email" placeholder="Enter your email!" required />
-                <button type="submit" class="submit-newsletter">
-                  <i class="fa-solid fa-arrow-right email-arrow"></i>
-                </button>
-              </div>
-              <div class="footer-privacy">
-                Our <span class="blue-footer">Privacy Policy</span> and provide
-                consent to receive <br />
-                updates from our company.
-              </div>
-            </div>
-            <div class="footer-col">
               <div class="footer-widget-links">
-                <h4 class="footer-title">Service Links</h4>
+                <h4 class="footer-title">Company</h4>
                 <ul class="main-footer-list">
-                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
-                  <li><a href="./erppage.html">ERP Solutions</a></li>
-                  <li><a href="./softwaredev.html">Software Development</a></li>
-                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+                  <li><a id="home" href="#">Home</a></li>
+                  <li><a href="./pages/careers.html">Career</a></li>
                   <li>
-                    <a href="./maintenance.html">Maintenance and Support</a>
+                    <a id="About-us" href="./pages/aboutus.html">About Us</a>
                   </li>
-                  <li><a href="./advisory.html">Advisory</a></li>
-                  <li><a href="./appdev.html">App Development</a></li>
-                  <li><a href="./branding.html">Branding</a></li>
+                  <li>
+                    <a id="About-us" href="./pages/contact.html">Contact Us</a>
+                  </li>
                 </ul>
               </div>
             </div>
             <div class="footer-col">
               <div class="footer-widget-links">
-                <h4 class="footer-title">Quick links</h4>
-                <ul class="main-footer-list">
-                  <li><a href="../index.html">Home</a></li>
-                  <!-- <li><a href="../index.html">Services</a></li> -->
-                  <!-- <li><a href="../index.html">Technologies</a></li> -->
-                  <li><a href="./careers.html">Career</a></li>
-                  <li><a href="./aboutus.html">About Us</a></li>
-                  <li><a href="./contact.html">Contact Us</a></li>
+                <h4 class="footer-title">Services</h4>
+                <ul class="main-footer-list serv-list">
+                  <li>
+                    <a href="./pages/websitedev.html">Website Development</a>
+                  </li>
+                  <li>
+                    <a href="./pages/digitalmarket.html">Digital Marketing</a>
+                  </li>
+                  <li>
+                    <a href="./pages/erppage.html">ERP Solutions</a>
+                  </li>
+                  <li>
+                    <a href="./pages/softwaredev.html">Software Development</a>
+                  </li>
+                  <li><a href="./pages/advisory.html">Advanced Tech</a></li>
+                  <li>
+                    <a href="./pages/maintenance.html"
+                      >Maintenance and Support</a
+                    >
+                  </li>
+                  <li><a href="./pages/advisory.html">Advisory</a></li>
+                  <li><a href="./pages/appdev.html">App Development</a></li>
+                  <li><a href="./pages/branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
+
             <div class="footer-col">
               <div class="footer-widget-links-2">
                 <h4 class="footer-title">Socials</h4>
@@ -467,6 +464,23 @@
                     >
                   </li>
                 </ul>
+              </div>
+            </div>
+            <div class="footer-col">
+              <h5 class="footer-title">Subscribe Us</h5>
+              <div class="footer-text">
+                Join us to our Newsletter and releases submit.
+              </div>
+              <div class="form-group">
+                <input type="email" placeholder="Enter your email!" required />
+                <button type="submit" class="submit-newsletter">
+                  <i class="fa-solid fa-arrow-right email-arrow"></i>
+                </button>
+              </div>
+              <div class="footer-privacy">
+                Our <span class="blue-footer">Privacy Policy</span> and provide
+                consent to receive <br />
+                updates from our company.
               </div>
             </div>
           </div>
@@ -500,7 +514,10 @@
           ></a>
           <ul id="menu" class="toogle-ul">
             <li>
-              <a href="./websitedev.html" data-page="Service1" style="color: #fff; background-color: #0092ff"
+              <a
+                href="./websitedev.html"
+                data-page="Service1"
+                style="color: #fff; background-color: #0092ff"
                 >Website Development</a
               >
             </li>
@@ -513,11 +530,7 @@
               <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
             <li>
-              <a
-                href="./softwaredev.html"
-                
-                >Software Development</a
-              >
+              <a href="./softwaredev.html">Software Development</a>
             </li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
