Updated the careers page

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -219,7 +219,7 @@
           >
             <div class="Projects-div">
               <ul class="App-list pro-col">
-                <li style="list-style-type: none;"><h2>Apps</h2></li>
+                <h2>Apps</h2>
                 <li>
                   <a href="#">Plant Disease Detection (Plant-Care App)</a>
                 </li>
@@ -227,7 +227,7 @@
                 <li><a href="#">Image Enchance App</a></li>
               </ul>
               <ul class="Web-list pro-col">
-                <li style="list-style-type: none;"><h2>Websites</h2></li>
+                <h2>Websites</h2>
                 <li>
                   <a href="#">Medical Image Analysis & Feature Extraction</a>
                 </li>
