--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
   <body>
     <div class="sidebar-closer"></div>
     <div class="Gotohome">
-      <a href="/"><i class="fa-solid fa-arrow-up"></i></a>
+      <a><i class="fa-solid fa-arrow-up"></i></a>
     </div>
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question" target="_blank""><i class="fa-brands fa-whatsapp"></i></a>
+      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
     <div class="content">
       <!-- header section  -->
