added service images

--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -156,7 +156,7 @@
         </header>
         <div
           class="about-home"
-          style="background: url('../assets/projects/advancedtech.jpg')"
+          style="background: url('../assets/Service-images/Advance\ Tech\ -\ 1.jpg')"
         >
           <div class="header-top">
             <div class="auto-container">
@@ -198,7 +198,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="https://img.freepik.com/free-photo/people-generating-images-using-artificial-intelligence-laptop_23-2150794313.jpg?size=626&ext=jpg&uid=R75365823&ga=GA1.1.1388913245.1697904651&semt=ais"
+                src="../assets/Service-images/Advisory - 2.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -235,7 +235,7 @@
                     <img
                       class="lower-content-img"
                       style="border-radius: 20px"
-                      src="https://img.freepik.com/free-vector/virtual-reality-friends-cartoons_18591-52210.jpg?size=626&ext=jpg&uid=R75365823&ga=GA1.1.1388913245.1697904651&semt=ais"
+                      src="../assets/Service-images/Advisory - 1.jpg"
                       alt=""
                     />
                   </div>
