--- a/pages/appdev.html
+++ b/pages/appdev.html
@@ -157,7 +157,7 @@
         <div
           class="about-home"
           style="
-            background: url('https://img.freepik.com/free-vector/mobile-app-development-composition-with-flowchart-isometric-platforms-application-icons-human-characters-text-captions-vector-illustration_1284-77306.jpg?w=996&t=st=1699190201~exp=1699190801~hmac=5514c73b45eb26538c04ec4aa0ce18a8e924fb0b7cd3002ebf37e2a2206961b2');
+            background: url('../assets/Service-images/appdev1.jpg');
           "
         >
           <div class="header-top">
@@ -200,7 +200,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="https://img.freepik.com/free-vector/app-development-illustration_52683-47931.jpg?w=826&t=st=1699190228~exp=1699190828~hmac=45af17199ba8acc4f22da540e047e4b9da90a95e9c38c86e5e50a3977c9af72f"
+                src="../assets/Service-images/appdev2.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -333,7 +333,7 @@
                     <img
                       style="border-radius: 30px"
                       class="lower-content-img"
-                      src="https://img.freepik.com/free-vector/app-development-concept-illustration_114360-5110.jpg?w=826&t=st=1699190259~exp=1699190859~hmac=489fe3838bdd9acf4c1f63b2e929fea6ab7ad0dc09246bae97b6a2ea26ee41ab"
+                      src="../assets/Service-images/appdev3.jpg"
                       alt=""
                     />
                   </div>
