--- a/pages/branding.html
+++ b/pages/branding.html
@@ -154,7 +154,7 @@
             </nav>
           </div>
         </header>
-        <div class="about-home" style="background: url('https://img.freepik.com/free-vector/branding-concept-landing-page_52683-12361.jpg?w=826&t=st=1699191597~exp=1699192197~hmac=b51d430919f732556664b938f9dee96dd0dae647c3a67d4f5e701c239b2e1382');">
+        <div class="about-home" style="background: url('../assets/services/3.jpg'); background-position: bottom bottom;">
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -195,7 +195,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="https://img.freepik.com/free-photo/branding-copyright-design-spaceship-graphic-concept_53876-120958.jpg?w=826&t=st=1699191507~exp=1699192107~hmac=06376648eeaa5e0486aa348d0a60344f9c19769da9e06391967d8235b65959c9"
+                src="../assets/Service-images/Branding - 2.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -230,7 +230,7 @@
                     <img
                       style="border-radius: 30px;"
                       class="lower-content-img"
-                      src="https://img.freepik.com/free-photo/marketing-branding-creativity-business-values_53876-120185.jpg?w=1060&t=st=1699191314~exp=1699191914~hmac=772ed5d5c0eb6081ed1f65bb69285c4cad9e1ee8b6b00c1453f5840c4a5c60c5"
+                      src="../assets/Service-images/Branding - 1.jpg"
                       alt=""
                     />
                   </div>
