--- a/pages/careers.html
+++ b/pages/careers.html
@@ -164,8 +164,8 @@
         <div
           class="about-home"
           style="
-            background: url('https://images.unsplash.com/photo-1455849318743-b2233052fcff?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-            background-position: left right;
+            background: url('https://img.freepik.com/premium-photo/hand-dark-neon-background-holds-human-icon-banner-with-copy-space-space-text-human-resources-hr-management-recruitment-employment-headhunting-concept_150455-9892.jpg?w=1380');
+            background-position: center center;
             background-size: 100%;
           "
         >
