--- a/pages/contact.html
+++ b/pages/contact.html
@@ -153,9 +153,9 @@
         <div
           class="about-home"
           style="
-            background: url('https://images.unsplash.com/photo-1671445791136-049a3f151e3c?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-            background-position: 0 0;
-            background-size: contain;
+            background: url('../assets/contacts/contact.jpg');
+            background-position: top;
+            background-size: cover;
           "
         >
           <div class="header-top">
