--- a/pages/digitalmarket.html
+++ b/pages/digitalmarket.html
@@ -158,7 +158,7 @@
         <div
           class="about-home"
           style="
-            background: url('https://i.pinimg.com/564x/8e/1b/89/8e1b89db408243e8f29abf9718213b04.jpg');
+            background: url('../assets/Service-images/Digital\ Marketing\ -\ 1.jpg');
             background-size: 90% cover !important;
             background-position: center top !important;
           "
@@ -203,7 +203,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="https://images.pexels.com/photos/6476589/pexels-photo-6476589.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                src="../assets/Service-images/Digital Marketing - 2.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -244,7 +244,7 @@
                     <img
                       style="border-radius: 30px"
                       class="lower-content-img"
-                      src="https://i.pinimg.com/564x/b6/c1/6b/b6c16bd46c66e53f3e0e8696e763e922.jpg"
+                      src="../assets/Service-images/Digital marketing - 3.jpg"
                       alt=""
                     />
                   </div>
