--- a/pages/erppage.html
+++ b/pages/erppage.html
@@ -158,7 +158,9 @@
         <div
           class="about-home"
           style="
-            background: url('https://images.unsplash.com/photo-1555949963-ff9fe0c870eb?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            background: url('../assets/Service-images/ERP\ solution\ -\ 1.jpg');
+            background-size: cover;
+            background-position: top top;
           "
         >
           <div class="header-top">
@@ -201,7 +203,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="https://img.freepik.com/free-vector/erp-enterprise-resource-planning-isometric-landing-page_107791-5191.jpg?w=1380&t=st=1698773304~exp=1698773904~hmac=1882bba4b4e90b97d0d72acaf9cdedb6d2621050f72f41917e2882ba5be195de"
+                src="../assets/Service-images/ERp solution - 2.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -290,7 +292,7 @@
                     <img
                       style="border-radius: 20px"
                       class="lower-content-img"
-                      src="https://img.freepik.com/free-vector/gradient-erp-illustration_23-2149379179.jpg?w=826&t=st=1698773343~exp=1698773943~hmac=5895ad34432fd3bba2e794ad6a1f12cfd02f689dd22ffa407afc3f89e39cf7a5"
+                      src="../assets/Service-images/ERP solution - 3.jpg"
                       alt=""
                     />
                   </div>
