--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -154,7 +154,14 @@
             </nav>
           </div>
         </header>
-        <div class="about-home" style="background: url('https://img.freepik.com/free-photo/standard-quality-control-concept-m_23-2150041850.jpg?w=740&t=st=1699189740~exp=1699190340~hmac=77f07bc0325f3eb1f06c36d0ed977e384ca4f35cda4518abd0bb018296026f87');">
+        <div
+          class="about-home"
+          style="
+            background: url('../assets/Service-images/Maintenance\ and\ support\ -\ 1.jpg');
+            background-position: center center;
+            background-size: contain;
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -179,11 +186,26 @@
             </div>
           </div>
           <div class="auto-container">
-            <div class="page-title">
+            <div
+              class="page-title"
+              style="
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              "
+            >
               <h1 class="title-abt">Maintenance and Support</h1>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><p class="page-about">Maintenance and Support</p></li>
+                <li>
+                  <p
+                    class="page-about"
+                    style="text-align: left; text-wrap: nowrap"
+                  >
+                    Maintenance and Support
+                  </p>
+                </li>
               </ul>
             </div>
           </div>
@@ -195,7 +217,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="https://img.freepik.com/free-vector/technical-support-guys-working-repairing-computer-hardware-software-troubleshooting-fixing-problems-problem-checking-concept_335657-1838.jpg?w=826&t=st=1699189817~exp=1699190417~hmac=6093a3f18b3b96fa5543eca1e82ad5959e32605fb4da1c4ac85e06f472184d28"
+                src="../assets/Service-images/Maintenance and support - 2.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -228,9 +250,9 @@
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
-                    style="border-radius: 30px;"
+                      style="border-radius: 30px"
                       class="lower-content-img"
-                      src="https://img.freepik.com/free-vector/settings-concept-illustration_114360-4157.jpg?w=740&t=st=1699189862~exp=1699190462~hmac=cc036cbbf71614a55aa0357fd295b616014df3266fa0cf83e0e03c3915597c5d"
+                      src="../assets/Service-images/Maintenance and support - 3.jpg"
                       alt=""
                     />
                   </div>
@@ -454,6 +476,9 @@
             <li>
               <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
+            <li><a href="./websitedev.html">Website Development</a></li>
+            <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+            <li><a href="./erppage.html">ERP Solutions</a></li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li>
@@ -464,6 +489,8 @@
               >
             </li>
             <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Branding</a></li>
           </ul>
         </li>
         <li><a href="./careers.html">Career</a></li>
