--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -158,8 +158,10 @@
         <div
           class="about-home"
           style="
-            background: url('https://img.freepik.com/free-vector/creative-web-homepage-illustration_52683-79847.jpg?w=1380&t=st=1698820936~exp=1698821536~hmac=f291b81b97089c683d5a506110c922c985ad2c6122a2dfbccc8ab503f41667cb');
+            background: url('../assets/Service-images/Software\ Development\ -\ 1.jpg');
             background-size: cover;
+            background-position-x: center;
+            background-position-y: center;
           "
         >
           <div class="header-top">
@@ -202,7 +204,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="https://img.freepik.com/free-vector/web-development-isometric-concept-composition-illustration_1284-55922.jpg?size=626&ext=jpg&uid=R75365823&ga=GA1.1.1388913245.1697904651&semt=ais"
+                src="../assets/Service-images/Software Development (2).jpg"
                 alt=""
               />
               <div class="lower-content">
