--- a/pages/websitedev.html
+++ b/pages/websitedev.html
@@ -159,7 +159,8 @@
         <div
           class="about-home"
           style="
-            background: url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            background: url('../assets/Service-images/Website\ Development\ -\ 1.jpg');
+            background-position: center center;
           "
         >
           <div class="header-top">
@@ -202,7 +203,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/optimized/rev-21ec0b7/www.spinxdigital.com/app/uploads/2022/10/Best-Website-Designs_1.1.jpg"
+                src="../assets/Service-images/Website Development - 2.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -304,7 +305,7 @@
                         aspect-ratio: 1/1;
                       "
                       class="lower-content-img"
-                      src="../assets/projects/webdev_image.jpg"
+                      src="../assets/Service-images/Website Development - 3.jpg"
                       alt=""
                     />
                   </div>
