--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -198,7 +198,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/Service-images/Advisory - 2.jpg"
+                src="../assets/Service-images/Advanced tech - 2.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -235,7 +235,7 @@
                     <img
                       class="lower-content-img"
                       style="border-radius: 20px"
-                      src="../assets/Service-images/Advisory - 1.jpg"
+                      src="../assets/Service-images/Advanced tech - 3.jpg"
                       alt=""
                     />
                   </div>
