--- a/pages/branding.html
+++ b/pages/branding.html
@@ -154,7 +154,7 @@
             </nav>
           </div>
         </header>
-        <div class="about-home" style="background: url('../assets/services/3.jpg'); background-position: bottom bottom;">
+        <div class="about-home" style="background: url('../assets/Service-images/Branding\ -\ 2.jpg'); background-position: bottom bottom;">
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -195,7 +195,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/Service-images/Branding - 2.jpg"
+                src="../assets/Service-images/Branding - 1.jpg"
                 alt=""
               />
               <div class="lower-content">
