--- a/pages/careers.html
+++ b/pages/careers.html
@@ -164,7 +164,7 @@
         <div
           class="about-home"
           style="
-            background: url('https://img.freepik.com/premium-photo/hand-dark-neon-background-holds-human-icon-banner-with-copy-space-space-text-human-resources-hr-management-recruitment-employment-headhunting-concept_150455-9892.jpg?w=1380');
+            background: url('../assets/Careers.jpg');
             background-position: center center;
             background-size: 100%;
           "
