--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a><i class="fa-solid fa-arrow-up"></i></a>
     </div>
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
     <div class="content">
       <!-- header section  -->
