fixed some path for footer

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -315,12 +315,12 @@
                 <h4 class="footer-title">Company</h4>
                 <ul class="main-footer-list">
                   <li><a id="home" href="#">Home</a></li>
-                  <li><a href="./pages/careers.html">Career</a></li>
+                  <li><a href="./careers.html">Career</a></li>
                   <li>
-                    <a id="About-us" href="./pages/aboutus.html">About Us</a>
+                    <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="About-us" href="./pages/contact.html">Contact Us</a>
+                    <a id="About-us" href="./contact.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -330,26 +330,26 @@
                 <h4 class="footer-title">Services</h4>
                 <ul class="main-footer-list serv-list">
                   <li>
-                    <a href="./pages/websitedev.html">Website Development</a>
+                    <a href="./websitedev.html">Website Development</a>
                   </li>
                   <li>
-                    <a href="./pages/digitalmarket.html">Digital Marketing</a>
+                    <a href="./digitalmarket.html">Digital Marketing</a>
                   </li>
                   <li>
-                    <a href="./pages/erppage.html">ERP Solutions</a>
+                    <a href="./erppage.html">ERP Solutions</a>
                   </li>
                   <li>
-                    <a href="./pages/softwaredev.html">Software Development</a>
+                    <a href="./softwaredev.html">Software Development</a>
                   </li>
-                  <li><a href="./pages/advisory.html">Advanced Tech</a></li>
+                  <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./pages/maintenance.html"
+                    <a href="./maintenance.html"
                       >Maintenance and Support</a
                     >
                   </li>
-                  <li><a href="./pages/advisory.html">Advisory</a></li>
-                  <li><a href="./pages/appdev.html">App Development</a></li>
-                  <li><a href="./pages/branding.html">Branding</a></li>
+                  <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
