--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="Gotohome">
       <a><i class="fa-solid fa-arrow-up"></i></a>
     </div>
+    <div class="ping"></div>
     <div class="whatsapp-btn">
       <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
