--- a/pages/websitedev.html
+++ b/pages/websitedev.html
@@ -46,7 +46,15 @@
   </head>
   <body>
     <div class="sidebar-closer"></div>
+    <div class="ping"></div>
 
+    <div class="whatsapp-btn">
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
+    </div>
     <div class="content">
       <!-- header section  -->
 
@@ -428,9 +436,7 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
